src/static/css/RandomMovie.css
:root {
    --secondary-bg-color: black;
    --primary-bg-color : #0D0D0D;
    --primary-txt-color: white; 
    --nav-bg-color : #0D0D0D;
    --tmdb-color : #01d277;
    --main-padding: 15px; 
}

.movie-segment {
    color: var(--primary-txt-color);
    background-color: var(--secondary-bg-color) !important;
    border: 0 !important;
    border-radius: 0px !important;
    margin-left: 0px !important;
    margin-right: 0px !important;
    position: absolute;
    transition: 3s;

    /* height: 500px !important; */
}

.slide-segment {
    
    left: -100px;
    /* width: 100px;
    height: 100px; */
    /* background: blue; */
}

.column {
    float: left;
    /* width: 50%; */
    padding-left : 0px;
    padding-right : 10px;
    padding-top: 10px;
    padding-bottom: 30px;
    /* height: 300px; Should be removed. Only for demonstration */
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

.movie-title {
    /* margin: 0; */
    /* padding:5; */
    font-size: 2.4em;
    line-height: 1.1em;
    font-weight: 700;
    display: inline-block 
}

.release-date {
    opacity: 0.6;
    font-size: 1.7em;
    font-weight: 400;
}

